--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,5 +1,5 @@
-@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css');
-@import url('https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css');
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css");
+@import url("https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css");
 
 /* Estilos para la barra de desplazamiento en Webkit (Chrome, Safari) */
 ::-webkit-scrollbar {
@@ -43,10 +43,14 @@
   100% {
     transform: translateY(0);
     box-shadow: 0 0 0 rgba(120, 205, 233, 0); /* Vuelve a la sombra sin color al final */
-    border-color: rgba(120, 205, 233, 0); /* Vuelve al borde sin color al final */
+    border-color: rgba(
+      120,
+      205,
+      233,
+      0
+    ); /* Vuelve al borde sin color al final */
   }
 }
-
 
 @keyframes textFadeInOut {
   0% {
@@ -110,22 +114,21 @@
   transition: stroke-dasharray 0.3s;
 }
 
-
 .home-container {
   color: white;
   padding: 0 0;
 }
 
 /* Hero Section */
-  .hero-section {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px 20px;
-    min-height: 80vh;
-    background-size: cover;
-    background-position: center;
-  }
+.hero-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 20px;
+  min-height: 80vh;
+  background-size: cover;
+  background-position: center;
+}
 
 .hero-content {
   display: flex;
@@ -144,9 +147,12 @@
 
 .hero-subtext {
   font-size: 3rem;
-  background: linear-gradient(to right,  rgb(120, 205, 233), #98FF98); 
+  background: linear-gradient(to right, rgb(120, 205, 233), #98ff98);
+  background-clip: text;
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;  text-align: center;  margin-top: -20px;
+  -webkit-text-fill-color: transparent;
+  text-align: center;
+  margin-top: -20px;
   animation: fadeIn 2s ease-out; /* Aplica la animación de fade-in */
 }
 
@@ -158,7 +164,6 @@
   margin-top: -30px;
   margin-right: -20px;
 }
-
 
 .social-icons a,
 .social-icons .email-copy-button {
@@ -182,7 +187,7 @@
   height: auto;
   opacity: 0; /* Asegúrate de que comience invisible */
   animation: fadeIn 2s ease-out forwards, fadeInOut 5s infinite; /* Aplica ambas animaciones */
-} 
+}
 
 .hero-image-container {
   max-width: 45%; /* Asegura que la imagen no ocupe más del 45% del ancho */
@@ -202,9 +207,10 @@
   }
 }
 /* About Me Section */
-.about-title{
+.about-title {
   font-size: 2.5rem;
-  background: linear-gradient(to right,  rgb(120, 205, 233), #98FF98); 
+  background: linear-gradient(to right, rgb(120, 205, 233), #98ff98);
+  background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   margin-bottom: 50px;
@@ -229,7 +235,11 @@
 
 /* Highlight Keywords */
 .highlight {
-  color: rgb(120, 205, 233); /* Cambia el color según el diseño de tu portafolio */
+  color: rgb(
+    120,
+    205,
+    233
+  ); /* Cambia el color según el diseño de tu portafolio */
   font-weight: bold;
 }
 
@@ -240,9 +250,11 @@
 
 .experience-title {
   font-size: 2.5rem;
-  background: linear-gradient(to right,  rgb(120, 205, 233), #98FF98); 
+  background: linear-gradient(to right, rgb(120, 205, 233), #98ff98);
+  background-clip: text;
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;  text-align: center;
+  -webkit-text-fill-color: transparent;
+  text-align: center;
   margin-bottom: 50px;
 }
 
@@ -253,7 +265,6 @@
   max-width: 800px; /* This will limit the width of the content */
   margin: 0 auto; /* Center the item horizontally */
   width: 100%; /* Ensures it takes up available width */
-
 }
 
 .experience-timeline {
@@ -267,6 +278,7 @@
   height: 10px;
   background-color: rgb(120, 205, 233);
   border-radius: 50%;
+  position: relative;
 }
 
 .timeline-line {
@@ -308,7 +320,6 @@
   line-height: 1.6;
 }
 
-
 /* Technologies Section */
 .technologies-section {
   padding: 40px 0;
@@ -317,7 +328,8 @@
 
 .technologies-title {
   font-size: 1.5rem;
-  background: linear-gradient(to right,  rgb(120, 205, 233), #98FF98); 
+  background: linear-gradient(to right, rgb(120, 205, 233), #98ff98);
+  background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   margin-bottom: 50px;
@@ -327,7 +339,6 @@
   font-size: 1.5rem;
   color: rgb(120, 205, 233);
 }
-
 
 .technologies-section h2 {
   font-size: 3rem;
@@ -346,7 +357,6 @@
   font-size: 4rem;
   color: white; /* Color blanco por defecto */
   transition: color 0.3s ease; /* Transición más lenta para el cambio de color */
-  
 }
 
 /* Colores específicos de los iconos al hacer hover */
@@ -379,21 +389,21 @@
 }
 .technology-item:hover i.fa-github {
   color: black;
-} 
+}
 .technology-item:hover i.fa-python {
-  color:  #daaf17;
+  color: #daaf17;
 }
 .technology-item:hover i.fa-java {
-  color:  red;
+  color: red;
 }
 .technology-item:hover i.devicon-vscode-plain {
-  color:  #3e6a91;
+  color: #3e6a91;
 }
 .technology-item:hover i.devicon-androidstudio-plain {
-  color:  green;
+  color: green;
 }
 .technology-item:hover i.devicon-dotnetcore-plain {
-  color:  purple;
+  color: purple;
 }
 
 .technology-item {
@@ -411,7 +421,7 @@
 }
 
 .technology-item:hover::after {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
@@ -443,7 +453,6 @@
   opacity: 1; /* Hacer visible el texto */
   transform: translateY(0); /* Desplazar el texto a su posición original */
 }
-
 
 .technology-item:hover .tech-name {
   display: block;
@@ -480,9 +489,9 @@
   transition: backdrop-filter 0.3s ease-in; /* Transición suave */
   z-index: 1000;
 }
-.technology-modal.open{
+.technology-modal.open {
   backdrop-filter: blur(5px);
-} 
+}
 
 .modal-content {
   color: #fff;
@@ -495,7 +504,6 @@
   overflow-y: auto;
   display: flex;
   flex-direction: column;
-  
 }
 
 .modal-content h3 {
@@ -534,7 +542,6 @@
   text-align: center;
 }
 
-
 .modal-content ul {
   list-style: disc;
   margin-left: 20px;
@@ -549,7 +556,7 @@
 }
 
 .close {
-    position: absolute;
+  position: absolute;
   top: 10px;
   right: 25px;
   font-size: 36px;
@@ -562,7 +569,6 @@
   transform: scale(1) rotate(90deg); /* Aumenta el tamaño y rota el ícono */
   color: #f00; /* Cambia el color al pasar el cursor */
 }
-
 
 /* Social Icons */
 .social-links {
@@ -599,7 +605,8 @@
 
 .projects-title {
   font-size: 2.5rem;
-  background: linear-gradient(to right,  rgb(120, 205, 233), #98FF98); 
+  background: linear-gradient(to right, rgb(120, 205, 233), #98ff98);
+  background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   margin-bottom: 50px;
@@ -638,7 +645,6 @@
   margin-top: 10px; /* Ajusta márgenes si es necesario */
 }
 
-
 .hidden {
   display: none; /* Ocultar proyectos no relevantes */
 }
@@ -649,7 +655,6 @@
   border-radius: 12px;
   margin-bottom: 10px;
 }
-
 
 .project-card h3 {
   font-size: 1.5rem;
@@ -706,13 +711,14 @@
 
 .formation-title {
   font-size: 2.5rem;
-  background: linear-gradient(to right,  rgb(120, 205, 233), #98FF98); 
+  background: linear-gradient(to right, rgb(120, 205, 233), #98ff98);
+  background-clip: text;
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;  text-align: center;
+  -webkit-text-fill-color: transparent;
+  text-align: center;
   margin-bottom: 50px;
   position: relative;
 }
-
 
 .formation-item {
   display: flex;
@@ -784,4 +790,28 @@
   text-align: center;
   color: white;
   margin-top: 120px;
+}
+
+.active-indicator {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 12px;
+  height: 12px;
+  background-color: #4caf50; /* Green color - adjust as needed */
+  border-radius: 50%;
+  animation: pulse 2s infinite;
+}
+
+@keyframes pulse {
+  0% {
+    box-shadow: 0 0 0 0 rgba(76, 175, 80, 0.4);
+  }
+  70% {
+    box-shadow: 0 0 0 10px rgba(76, 175, 80, 0);
+  }
+  100% {
+    box-shadow: 0 0 0 0 rgba(76, 175, 80, 0);
+  }
 }
